# airas-20251108-102954-tanaka

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-bert-base-uncased-110M--GLUE-RTE.yaml  proposed-bert-base-uncased-110M--GLUE-RTE.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
